Add KerasDeepLearningPlayer