@@ -2,7 +2,7 @@ package ru.alexeylisyutenko.ai.connectfour.player.factory;
 
 import ru.alexeylisyutenko.ai.connectfour.player.factory.impl.*;
 
-import java.util.*;
+import java.util.List;
 
 /**
  * Global registry for PlayerFactory implementations.
@@ -11,19 +11,20 @@ public final class PlayerFactoryRegistry {
     private static final List<PlayerFactory> FACTORIES;
 
     static {
-        ArrayList<PlayerFactory> factories = new ArrayList<>();
-        factories.add(new HumanPlayerFactory());
-        factories.add(new IterativeDeepeningPlayerFactory());
-        factories.add(new RandomPlayerFactoryFactory());
-        factories.add(new BasicEvaluationPlayerFactory());
-        factories.add(new FocusedEvaluationPlayerFactory());
-        factories.add(new EmptyEvaluationPlayerFactory());
-        factories.add(new BetterEvaluationPlayerFactory());
-        factories.add(new RandomizedEvaluationPlayerFactory());
-        factories.add(new InternalEvaluationPlayerFactory());
-        factories.add(new NearestNeighborsPlayerFactory());
-        factories.add(new NaiveDeepLearningPlayerFactory());
-        FACTORIES = Collections.unmodifiableList(factories);
+        FACTORIES = List.of(
+                new HumanPlayerFactory(),
+                new IterativeDeepeningPlayerFactory(),
+                new RandomPlayerFactoryFactory(),
+                new BasicEvaluationPlayerFactory(),
+                new FocusedEvaluationPlayerFactory(),
+                new EmptyEvaluationPlayerFactory(),
+                new BetterEvaluationPlayerFactory(),
+                new RandomizedEvaluationPlayerFactory(),
+                new InternalEvaluationPlayerFactory(),
+                new NearestNeighborsPlayerFactory(),
+                new NaiveDeepLearningPlayerFactory(),
+                new KerasDeepLearningPlayerFactory()
+        );
     }
 
     private PlayerFactoryRegistry() {
